# machine-controller-manager

./: .env  .gitignore  .golangci.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Gopkg.toml  LICENCE.md  LICENSE.md  MAINTAINERS.md  METAL.md  Makefile  NOTICE.md  OWNERS  OWNERS_ALIASES  README.md  REUSE.toml  VERSION  branch.cfg  go.mod  go.sum
.ci/: build  check  integration-tests  pipeline_definitions  test
.docforge/: manifest.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_request.md
.ocm/: branch-info.yaml
.reuse/: dep5
code-generator/: README.md
docs/: FAQ.md  README.md  faq.md
hack/: add_license_headers.sh  admin-kube-config-request-template.json  check-generate.sh  gardener_local_restore.sh  gardener_local_setup.sh  generate-code  local_restore.sh  local_setup.sh  local_setup_for_gardener.sh  non_gardener_local_restore.sh  non_gardener_local_setup.sh  sast.sh  tools.go  tools.mk  update-codegen.sh  vgopath-setup.sh
kubernetes/: alicloud-machine-class.yaml  alicloud-secret.yaml  aliyun-machine-class.yaml  aliyun-secret.yaml  aws-instance-class.yaml  aws-machine-class.yaml  azure-machine-class.yaml  azure-secret.yaml  crds.yaml  deployment.yaml  gcp-machine-class.yaml  gcp-secret.yaml  instance-deploy.yaml  instance-deployment.yaml  instance-set.yaml  instance.yaml  machine-deployment.yaml  machine-set.yaml  machine.yaml  openstack-machine-class.yaml  openstack-secret.yaml  secret.yaml
pkg/apis/cluster/common/: BUILD.bazel  consts.go
pkg/apis/cluster/v1alpha1/testutil/: BUILD.bazel  testutil.go
(+756 files in other folders)
