load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "consts.go",
        "plugins.go",
    ],
    importpath = "github.com/gardener/machine-controller-manager/pkg/apis/cluster/common",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/golang/glog:go_default_library"],
)
