load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["testutil.go"],
    importpath = "github.com/gardener/machine-controller-manager/pkg/apis/cluster/v1alpha1/testutil",
    visibility = ["//visibility:public"],
    deps = ["//pkg/apis/cluster/v1alpha1:go_default_library"],
)
